[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telecast"
version = "0.1.0"
description = "Lightweight Telegram Bot API broadcast engine for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Seinarukiro" },
]
keywords = ["telegram", "bot", "broadcast", "notifications", "queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
templates = [
    "pyyaml>=6",
]
dev = [
    "pytest>=8",
    "pyyaml>=6",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/Seinarukiro2/pytelecast"
Repository = "https://github.com/Seinarukiro2/pytelecast"

[tool.hatch.build.targets.wheel]
packages = ["src/telecast"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
